[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-prompt-optimizer"
version = "3.0.0"
description = "Professional AI Prompt Engineering Tool — transforms rough instructions into production-ready optimized prompts"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

authors = [
    { name = "UniversalAI Engineer", email = "engineer@universalprompt.dev" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/universalai/prompt-optimizer"
Documentation = "https://universal-prompt-optimizer.readthedocs.io"
Source = "https://github.com/universalai/prompt-optimizer"
Tracker = "https://github.com/universalai/prompt-optimizer/issues"

[project.scripts]
prompt-optimizer = "src.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true